--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -662,8 +662,6 @@ Rainer, Bolton and other practitioner-researchers agree on the potential and val
 
 This authenticity has several relevant dimensions in this study including: audience; toolset; and supportive processes / documentation. This section explores the these dimensions of authenticity and the resulting relationships with agency of the learners.
 
-
-
 PBL is adapted to schools in many settings thus, authenticity is "on a scale" in PBL  The concept of an authentic-as-possible project is a key tool for educators to support game making via project based learning [find support]. One advatange of working with digital tools is that if issues of complexity and cost can be addressed access to laptops and the internet allow learners to use very similar production tools to professionals.
 
 
@@ -974,16 +972,8 @@ While tempting to say that the use of a template is eductional scaffolding and t
 
 While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
 
-The next stage was to imagine game elements to add to the design in the form of GDPs.
-The next chapter explores the use of GDPs by participants in detail using varied data.
 
 
-
-
-
-
-
-The next chapter explores responses to the aspect of identity in more detail.
 
 ### 2. Participant conflict due to lack of relevant technical support
 
@@ -1148,8 +1138,8 @@ An additional rationale for this process was to help reduce potential internal b
 
 NOTE - MOVE THIS TO TWO? OR TO ONE? SO END WITH TWO WHICH CREATES A TRANSITION TO THE NEXT CHAPTER EFFECTIVELY.
 
-This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents.
-CHECK IS THIS PREVIOUSLY EXPLORED?
+This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992].
+
 
 I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
@@ -1315,12 +1305,40 @@ The particular nature of the setting is significant.
 It holds promise to generate resources more generally.
 Something explored in conclusion.  
 
-
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
 <!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
 
+### Authentic tool use and instrumental agency
+
+The impact of coding tool use on instrumental agency can be explored here.
+
+#### Analysis in relatin to existing design heuristics of toolsets
+
+The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
+
+The user-friendly design heuristics of  low-thresholds, wide-walls, high-ceiling
+NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs - extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.  
+
+NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET
+
+In this design the tools set is distinct from tools like scratch which are self-contained to a large degree (while interacting with a website) - thus bears greater similarity with the Microworld concepts.
+
+The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default. This was picked up on by the community as they viewed each others assets and playtested games.
+
+Indeed, Scratch itself has moved to a web-bsaed online by default process in the lifespan of this research.  
+
+**How Resnick's design principles / heuristics differ from use of GDPs and processes in this chapter:**
+
+While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices. While useful community tools like remix, online sharing, and collabs are part of the community, the focus of the project and of much of the surrounding research is on a broadly creative tool set rather than to accelerate a group process.
+
+**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
+
+
+LINK - While principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
+
+The next chapter explores one element on this guidance for this programe in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
 
 ### Link to next chapter
 
@@ -1335,7 +1353,11 @@ Pivot to next chapter,
 <!--
 NOTE - In the following chapters, social and cultural lenses are used to analyse video data. -->
 
+Chapter five explores the use of GDPs by participants in detail using varied data.
+
 Chapter six explores the delivery and start to explore the impact of the process drama used and emerging community processes.
+
+The chapter explores responses to the aspect of identity in more detail.
 
 As explored in literature review the possibility to change and to play with identity is important in the work of Gee and ITO, who explore the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative process. In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
 
