--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -9,7 +9,6 @@ categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
 
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Notes on structure](#notes-on-structure)
 -   [Chapter Introduction](#chapter-introduction)
@@ -18,7 +17,23 @@ title: 4. Exploration of the Formative Learning Design Process
     research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
+    -   [Outline of Game Making Tools used in this
+        vignette](#outline-of-game-making-tools-used-in-this-vignette)
+        -   [Code Playgrounds](#code-playgrounds)
     -   [Context of Vignette](#context-of-vignette)
+    -   [Disambiguating terminology - Conflicts, tensions,
+        contradictions,
+        dilemmas](#disambiguating-terminology---conflicts-tensions-contradictions-dilemmas)
+    -   [Description of the nested levels of activity & tools
+        used](#description-of-the-nested-levels-of-activity-tools-used)
+        -   [Environmental Factors and
+            Objectives](#environmental-factors-and-objectives)
+        -   [Shared larger objective - Making games for an
+            audience](#shared-larger-objective---making-games-for-an-audience)
+        -   [Smaller objective - Implementing game
+            elements](#smaller-objective---implementing-game-elements)
+    -   [Exploring game design patterns and germ cell of
+        activity](#exploring-game-design-patterns-and-germ-cell-of-activity)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
@@ -28,14 +43,6 @@ title: 4. Exploration of the Formative Learning Design Process
         programmes](#p3-and-p4-the-main-game-making-programmes)
     -   [P5: Adapting to MakeCode Arcade and more formal
         settings](#p5-adapting-to-makecode-arcade-and-more-formal-settings)
-    -   [Description of the nested levels of activity & tools
-        used](#description-of-the-nested-levels-of-activity-tools-used)
-        -   [Diverse Environmental
-            Objectives](#diverse-environmental-objectives)
-        -   [Wider Objective - Making games for an
-            audience](#wider-objective---making-games-for-an-audience)
-        -   [Intermediate Objective - Implementing a game
-            element](#intermediate-objective---implementing-a-game-element)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Design tensions experienced as a researcher /
@@ -57,6 +64,9 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [1. Identity hardcore coding & disfunctional group work -
         P1](#identity-hardcore-coding-disfunctional-group-work---p1)
         -   [Navigating the conflict](#navigating-the-conflict)
+        -   [Discussion on Authenticity within this conflict and
+            playground as
+            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
     -   [2. Participant conflict due to lack of relevant technical
         support](#participant-conflict-due-to-lack-of-relevant-technical-support)
         -   [Tensions and related to navigation of various
@@ -69,14 +79,20 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
             ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-    -   [Limits to the learning dimensions map in an informal
-        setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
+    -   [Resolving the conflict by discarding this
+        approach](#resolving-the-conflict-by-discarding-this-approach)
+        -   [Limits to the learning dimensions map in an informal
+            setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
 -   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this
         study](#summary-of-barriers-exposed-in-this-study)
     -   [Discussion on the emergent (and mutual) nature of the design
         (and reseach?)
         process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-reseach-process.)
+    -   [Authentic tool use and instrumental
+        agency](#authentic-tool-use-and-instrumental-agency)
+        -   [Analysis in relatin to existing design heuristics of
+            toolsets](#analysis-in-relatin-to-existing-design-heuristics-of-toolsets)
     -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -1253,7 +1269,9 @@ Extra missions which highlight game challenge and user experience may help learn
 
 ### Resolving the conflict by discarding this approach
 
-Ultimately I gave up on this approach as it 
+Ultimately, I gave up on this approach as it did not align with the view of agency that I was trying to create in the learning environment.
+
+Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the teaching of  
 
 
 #### Limits to the learning dimensions map in an informal setting
@@ -1281,7 +1299,9 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## Conclusion
 
-### Summary of barriers exposed in this study
+### Summary of barriers exposed in this study -
+
+NOTE - PERHAPS MOVE BACK UP TO INTERVIEW SECTION?
 
 A summary (table or text) of the barriers and tensions exposed in interviews and in journal observations and in feedback from participants. Perhaps linking to appendix.
 
